--- a/kelas_11.html
+++ b/kelas_11.html
@@ -223,7 +223,7 @@
                             <p class="card-text">Alamat: Ds.Bendungan, Kp. Lebak Gudang</p>
                             <p class="card-text">Hobi: Membaca Komik</p>
                             <p class="card-text">Cita-Cita: Fullstack Developer</p>
-                            <p class="card-text">Motto Hidup: "p"</p>
+                            <p class="card-text">Motto Hidup: "Hidup cuma sekali, bikin semua langkah jadi berarti."</p>
                         </div>
                     </div>
                 </div>
