--- a/kelas_11.html
+++ b/kelas_11.html
@@ -207,11 +207,11 @@
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Keizia Aulia Ramadhani</h5>
-                            <p class="card-text">TTL : Bogor, 09 Juni 2009</p>
-                            <p class="card-text">Alamat: Kp. Lebak Gudang</p>
-                            <p class="card-text">Hobi: Badminton</p>
-                            <p class="card-text">Cita-Cita: Programmer</p>
-                            <p class="card-text">Motto Hidup: "Jangan mati sebelum bahagia"</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
