--- a/kelas_11.html
+++ b/kelas_11.html
@@ -195,11 +195,11 @@
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Nava Hazna Awaludin</h5>
-                            <p class="card-text">TTL : Majalengka, 23 April 2009</p>
-                            <p class="card-text">Alamat: Ds.Bendungan, Kp.Seuseupan</p>
-                            <p class="card-text">Hobi: Menonton Film</p>
-                            <p class="card-text">Cita-Cita: Front-end Developer</p>
-                            <p class="card-text">Motto Hidup: "Hidup, cinta, tertawa, mati"</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
+                            <p class="card-text">-</p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
