--- a/kelas_11.html
+++ b/kelas_11.html
@@ -207,11 +207,11 @@
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Keizia Aulia Ramadhani</h5>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
+                            <p class="card-text">Bogor, 2 September 2008</p>
+                            <p class="card-text">Alamat: Bendungan,jln. Pertanian, Kec.Ciawi, Kab.Bogor</p>
+                            <p class="card-text">Hobi: Memasak </p>
+                            <p class="card-text">Cita-Cita: pramugari</p>
+                            <p class="card-text">Motto Hidup: "jadi lah yang terbaik untuk dirimu sendiri bukan untuk orang lain"</p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
