--- a/kelas_11.html
+++ b/kelas_11.html
@@ -195,11 +195,11 @@
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Nava Hazna Awaludin</h5>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
+                            <p class="card-text">TTL: Bogor, 31 Juli 2008</p>
+                            <p class="card-text">Alamat: Gang Warung Seri, No 55, Rt 02 Rw 01, Ciawi, Bogor</p>
+                            <p class="card-text">Hobi: Fotografi</p>
+                            <p class="card-text">Cita-Cita: Ilustrator</p>
+                            <p class="card-text">Motto Hidup: "The Sun will Shine on us again"</p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
