--- a/kelas_10.html
+++ b/kelas_10.html
@@ -158,11 +158,11 @@
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Salwa Salsabila</h5>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
+                            <p class="card-text">TTL: Bogor, 30 april 2008</p>
+                            <p class="card-text">Alamat: </p>
+                            <p class="card-text">Hobi: travelling </p>
+                            <p class="card-text">Cita-Cita: lawyer </p>
+                            <p class="card-text">Motto Hidup: "yaudahlah jalanin aja"</p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
