--- a/kelas_12.html
+++ b/kelas_12.html
@@ -78,6 +78,7 @@
                             <p class="card-text">Hobi: Bernyanyi, bermain gitar dan badminton</p>
                             <p class="card-text">Cita-Cita: Design Grahpic & 3D Artist</p>
                             <p class="card-text">Motto Hidup: "Tumbuh pelan, tapi pasti"</p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/17Y0F61bZDLdypvZYKaNH72_UG8Re7Tc2/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -90,6 +91,7 @@
                             <p class="card-text">Hobi: Bermain Musik</p>
                             <p class="card-text">Cita-Cita:  IT Engineer/Dosen</p>
                             <p class="card-text">Motto Hidup: "Menjadi lebih baik dari hari kemarin."</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -102,6 +104,7 @@
                             <p class="card-text">Hobi: Mendengarkan Musik & Menonton</p>
                             <p class="card-text">Cita-Cita: Kerja di Big 3</p>
                             <p class="card-text">Motto Hidup: "Jalanin aja"</p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/1LOCYuUkU5bZZh9eWQhsNIGSwC6T4NuAa/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -114,6 +117,7 @@
                             <p class="card-text">Hobi: Membaca Buku</p>
                             <p class="card-text">Cita-Cita: Grafis desainer</p>
                             <p class="card-text">Motto Hidup: "choose your hard"</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -126,6 +130,7 @@
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -138,10 +143,11 @@
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
-                        <img src="assets/10/blank.webp" class="py-2 card-img-top rounded-circle" alt="...">
+                        <img src="assets/12/Dava.jpg" class="py-2 card-img-top rounded-circle" alt="...">
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Muhamad Dava Triansyah Putra S</h5>
@@ -150,6 +156,7 @@
                             <p class="card-text">Hobi: futsal,hiking</p>
                             <p class="card-text">Cita-Cita: Tentara, pengusaha</p>
                             <p class="card-text">Motto Hidup: "tetap maju dan melihat kedepan tanpa melihat masalalu ke arah belakang"</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -162,6 +169,7 @@
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -174,6 +182,7 @@
                             <p class="card-text">Hobi: Explore Tempat</p>
                             <p class="card-text">Cita-Cita: Cloud Engineer</p>
                             <p class="card-text">Motto Hidup: "Hidup Berjalan Kedepan Namun Ingat Apa Yang Telah Terjadi Di Belakang"</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -186,6 +195,7 @@
                             <p class="card-text">Hobi: Fishing</p>
                             <p class="card-text">Cita-Cita: Pengusaha Muda</p>
                             <p class="card-text">Motto Hidup: "Tetaplah rendah hati,jangan berhenti untuk tetap jadi baik"</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -198,6 +208,7 @@
                             <p class="card-text">Hobi: Coding</p>
                             <p class="card-text">Cita-Cita: Programmer</p>
                             <p class="card-text">Motto Hidup: "Be yourself, create your own work"</p>
+                            <p class="card-text"><a href="https://khairulikhwan.netlify.app/" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -210,6 +221,7 @@
                             <p class="card-text">Hobi: Mendengarkan musik</p>
                             <p class="card-text">Cita-Cita: Pengusaha</p>
                             <p class="card-text">Motto Hidup: "Jadilah diri sendiri"</p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/1WAwlv5DzSHxbbaVTvV7uKPdIgeJMuLwq/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -222,6 +234,7 @@
                             <p class="card-text">Hobi: Bermain Musik</p>
                             <p class="card-text">Cita-Cita: 3d Artist</p>
                             <p class="card-text">Motto Hidup: "Melankolia Akan Hilang Dengan Sendirinya"</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -234,6 +247,8 @@
                             <p class="card-text">Hobi: Sepak Bola</p>
                             <p class="card-text">Cita-Cita: Designer </p>
                             <p class="card-text">Motto Hidup: "Semua keberhasilan dapat terwujud dari luar zona nyaman"</p>
+                            <p><div class="card-text"><a href="https://drive.google.com/file/d/1cdgY9pP0f_oLQYUf2l0-vQVwWH0_zKQk/view?usp=sharing" target="_blank" rel="noopener noreferrer"
+                                >Lihat Portofolio</a></div></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -246,18 +261,20 @@
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
                             <p class="card-text">-</p>
+                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
-                        <img src="assets/10/blank.webp" class="py-2 card-img-top rounded-circle" alt="...">
+                        <img src="assets/12/rassel.jpg" class="py-2 card-img-top rounded-circle" alt="...">
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Rassel Muhammad Indra</h5>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
+                            <p class="card-text">TTL: Bogor, 17 Januari 2007</p>
+                            <p class="card-text">Alamat: Gg Warung Seri No.06 Bendungan Ciawi Bogor</p>
+                            <p class="card-text">Hobi: Game & Touring</p>
+                            <p class="card-text">Cita-Cita: Sukses</p>
+                            <p class="card-text">Motto Hidup: "Star Wars: Episode III – Revenge of the Sith, 2:00:15"</p>
+                            <p class="card-text"><a href="https://rassel-personal-website.vercel.app/" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -270,6 +287,7 @@
                             <p class="card-text">Hobi: Berenang, nyanyi, dan main game</p>
                             <p class="card-text">Cita-Cita: Programmer</p>
                             <p class="card-text">Motto Hidup: "hidup adalah pertandingan jika kau tak punya mental juara maka ratapilah hidup mu sebagai pecundang"</p>
+                            <p class="card-text"><a href="https://yudistiradw.vercel.app/" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                 </div>
