--- a/kelas_12.html
+++ b/kelas_12.html
@@ -117,20 +117,20 @@
                             <p class="card-text">Hobi: Membaca Buku</p>
                             <p class="card-text">Cita-Cita: Grafis desainer</p>
                             <p class="card-text">Motto Hidup: "choose your hard"</p>
-                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/1iCYugcWDPIVDt-apDL9s3uZRwWsJHPOG/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
-                        <img src="assets/10/blank.webp" class="py-2 card-img-top rounded-circle" alt="...">
+                        <img src="assets/12/desi.jpg" class="py-2 card-img-top rounded-circle" alt="...">
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Desi Rahma Wati</h5>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text">-</p>
-                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
+                            <p class="card-text">TTL: Bogor, 17 Desember 2006</p>
+                            <p class="card-text">Alamat: Ciawi, Bogor</p>
+                            <p class="card-text">Hobi: Menulis</p>
+                            <p class="card-text">Cita-cita: FOM</p>
+                            <p class="card-text">Motto Hidup: "live in the sunshine"</p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/1c01bBAQk998Nx-Zsxjx08Jgcijo5w6EG/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -156,7 +156,7 @@
                             <p class="card-text">Hobi: futsal,hiking</p>
                             <p class="card-text">Cita-Cita: Tentara, pengusaha</p>
                             <p class="card-text">Motto Hidup: "tetap maju dan melihat kedepan tanpa melihat masalalu ke arah belakang"</p>
-                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/1CYADOQOHqQeLD7uOEumGX7EKLVu5uIyh/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
-                        <img src="assets/10/blank.webp" class="py-2 card-img-top rounded-circle" alt="...">
+                        <img src="assets/12/fathir.jpg" class="py-2 card-img-top rounded-circle" alt="...">
                         <hr>
                         <div class="card-body">
                             <h5 class="card-title">Muhammad Fathir Alfiansyah</h5>
@@ -182,7 +182,7 @@
                             <p class="card-text">Hobi: Explore Tempat</p>
                             <p class="card-text">Cita-Cita: Cloud Engineer</p>
                             <p class="card-text">Motto Hidup: "Hidup Berjalan Kedepan Namun Ingat Apa Yang Telah Terjadi Di Belakang"</p>
-                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/1whjTEbOmt1GUdTMWzo1jwvvC9AtBehum/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
@@ -195,7 +195,7 @@
                             <p class="card-text">Hobi: Fishing</p>
                             <p class="card-text">Cita-Cita: Pengusaha Muda</p>
                             <p class="card-text">Motto Hidup: "Tetaplah rendah hati,jangan berhenti untuk tetap jadi baik"</p>
-                            <p class="card-text"><b href="#" target="_blank" rel="noopener noreferrer">Belum Mengumpulkan</b></p>
+                            <p class="card-text"><a href="https://drive.google.com/file/d/1J9ZwYyp5flrWEIPpLve1j7d6YlfY35Gg/view?usp=sharing" target="_blank" rel="noopener noreferrer">Lihat Portofolio</a></p>
                         </div>
                     </div>
                     <div class="card mx-3 my-2">
